# slate

./: .gitignore  Cargo.toml  SPEC.md  TASKS.md  docker-compose.yaml
slate-common/: Cargo.toml
slate-common/ddl/: account_updates.sql  account_updates_by_owner.sql  coverage.sql
slate-ingest/: Cargo.toml
slate-ingest/src/: capture.rs  lib.rs  main.rs  yellowstone.rs
slate-rpc/: Cargo.toml
slate-rpc/src/: lib.rs  main.rs
slate-store/: Cargo.toml
slate-store/src/: lib.rs
