[package]
name = "slate"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [ "slate-rpc", "slate-ingest", "slate-common", "slate-store" ]

[workspace.dependencies]
clickhouse = { version = "0.14", features = ["inserter"] }
clickhouse-rs = "1.1.0-alpha.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hex = "0.4" 
tokio = { version = "1.53.0", features = ["full"] }


[dependencies]
# clickhouse = { version = "0.14", features = ["inserter"] }
# clickhouse-rs = "1.1.0-alpha.1"