[package]
name = "slate-store"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
serde_bytes = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }